--- a/styles/style.css
+++ b/styles/style.css
@@ -8,22 +8,21 @@ body{
 	display: flex;
 	margin-right: auto;
 	margin-left: auto;
-	max-width: 1140px;
+	max-width: 1180px;
 }
 
 .column {
 	flex: 1;
-	border: 1px solid red;
 }
 
 /* header title */
 
 .quiz-title {
-	border: 1px solid blue;
 	margin-right: auto; 
 	margin-left: auto;
-	max-width: 500px;
+	max-width: 600px;
 	text-align: center;
+	font-size: 3em;
 }
 /* columns */
 
@@ -34,6 +33,7 @@ body{
 
 .center-column {
 	max-width: auto;
+	position: relative;
 }
 
 .right-column {
@@ -41,12 +41,6 @@ body{
 }
 
 /* left column elements */
-
-.counter-box-title,
-.counter-box,
-.correct-count {
-	border: 1px solid purple;
-}
 
 .counter-box {
 	width: 100%;
@@ -80,4 +74,35 @@ body{
 .correct-counter {
 	font-size: 5em;
 	text-align: right;
+}
+
+/* right column elements */
+
+.question-box {
+	margin-top: 200px;
+}
+
+.question {
+	font-weight: bold;
+	margin-bottom: 1em;
+	border: 1px solid #000;
+	padding: 0.5em;
+	text-align: center;
+}
+
+.possible-answers {
+	margin-left: auto;
+	margin-right: auto;
+	width: 140px;
+}
+
+.answer-item {
+	margin-bottom: 1.5em;
+}
+
+.input-button {
+	width: 50px;
+	margin-right: auto;
+	margin-left: auto;
+	margin-top: 1em;
 }
