--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,11 @@
 /* main column layout */
 
+html {
+    -webkit-font-smoothing: antialiased;
+}
+
 body{
-	font-family: sans-serif;
+	font-family: oxygen, arial, sans-serif;
 }
 
 .column-container {
@@ -52,7 +56,7 @@ body{
 
 }
 
-.counter {
+#counter {
 	font-size: 5em;
 	text-align: right;
 }
@@ -71,7 +75,7 @@ body{
 
 }
 
-.correct-counter {
+#correct-counter {
 	font-size: 5em;
 	text-align: right;
 }
@@ -100,9 +104,16 @@ body{
 	margin-bottom: 1.5em;
 }
 
-.input-button {
+#input-button {
 	width: 50px;
 	margin-right: auto;
 	margin-left: auto;
 	margin-top: 1em;
 }
+
+#quiz-feedback {
+	font-weight: bold;
+}
+
+
+
